--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Logan Reed</h1>
-									<p>Strategic Specialist</p>
+									<p>Compensation Consultant</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my resume</span></span>
