--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my resume</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/headshot.jpg" alt="" />
 								</a>
 							</article>
 
