--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Logan Reed</h1>
-									<p>Compensation Consultant</p>
+									<p>Compensation Professional</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my resume</span></span>
@@ -42,7 +42,7 @@
 
 						<!-- Work -->
 							<article id="work" class="panel">
-									<img src="images/resume.jpg" alt="" />
+									<img src="images/lreedresume.jpg" alt="" />
 								</p>
 							</article>
 
