--- a/index.html
+++ b/index.html
@@ -41,33 +41,52 @@
 							</article>
 
 						<!-- Work -->
-							<html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Centered Image</title>
+<title>Centered Resume with Download</title>
 <style>
     body {
         margin: 0;
         padding: 0;
         display: flex;
-        justify-content: center; /* horizontal center */
-        align-items: center;     /* vertical center */
-        height: 100vh;           /* full viewport height */
-        background-color: #fff;  /* optional: white background */
+        flex-direction: column;  /* stack image + button vertically */
+        justify-content: center; /* center vertically */
+        align-items: center;     /* center horizontally */
+        height: 100vh;
+        background-color: #fff;
     }
     img {
-        width: 612px;   /* exact size */
-        height: 792px;  /* exact size */
+        width: 612px;
+        height: 792px;
+    }
+    a.download-btn {
+        display: inline-block;
+        margin-top: 15px;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 16px;
+        font-family: Arial, sans-serif;
+        transition: background-color 0.3s ease;
+    }
+    a.download-btn:hover {
+        background-color: #0056b3;
     }
 </style>
 </head>
 <body>
     <article id="work" class="panel">
         <img src="images/lreedresume.jpg" alt="Resume" />
+        <a href="files/lreedresume.pdf" download class="download-btn">
+            Download PDF
+        </a>
     </article>
 </body>
 </html>
-
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
