--- a/index.html
+++ b/index.html
@@ -41,10 +41,33 @@
 							</article>
 
 						<!-- Work -->
-	<article id="work" class="panel">
-									<img src="images/lreedresume.jpg" alt="" />
-								</p>
-							</article>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Centered Image</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center; /* horizontal center */
+        align-items: center;     /* vertical center */
+        height: 100vh;           /* full viewport height */
+        background-color: #fff;  /* optional: white background */
+    }
+    img {
+        width: 612px;   /* exact size */
+        height: 792px;  /* exact size */
+    }
+</style>
+</head>
+<body>
+    <article id="work" class="panel">
+        <img src="images/lreedresume.jpg" alt="Resume" />
+    </article>
+</body>
+</html>
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
