--- a/index.html
+++ b/index.html
@@ -5,12 +5,51 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Logan Reed</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Resume</title>
+<style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        /* Corporate gradient background */
+        background: linear-gradient(135deg, #f9f9f9, #e6e6e6);
+        font-family: Arial, sans-serif;
+    }
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    img {
+        display: block;
+        width: 612px;
+        height: auto; /* keeps aspect ratio */
+        max-width: 100%; /* responsive */
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* subtle shadow for corporate look */
+        border: 1px solid #ccc; /* clean border */
+        background: white; /* white backing for the resume */
+        padding: 10px;
+    }
+    .download-btn {
+        margin-top: 20px;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        font-size: 16px;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+    .download-btn:hover {
+        background-color: #0056b3;
+    }
+</style>
+</head>
 	</head>
 	<body class="is-preload">
 
