--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Logan Price Reed</h1>
+					
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/headshot.jpg" alt="" /></span>
+							<span class="image fill" data-position="center">
+    <img src="images/headshot.jpg" alt="" style="width:75%; height:auto;" />
+</span>
 						</div>
 					</section>
 
@@ -470,3 +472,4 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
