--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center">
-    <img src="images/headshot.jpg" alt="" style="width:75%; height:auto;" />
+							<style>
+.image.fill img {
+    width: 75%;
+    height: auto;
+}
+</style>
+
+<span class="image fill" data-position="center">
+    <img src="images/headshot.jpg" alt="" />
 </span>
 						</div>
 					</section>
@@ -472,5 +479,6 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
