--- a/index.html
+++ b/index.html
@@ -28,16 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<style>
-.image.fill img {
-    width: 75%;
-    height: auto;
-}
-</style>
-
-<span class="image fill" data-position="center">
-    <img src="images/headshot.jpg" alt="" />
-</span>
+		<span class="image fill" data-position="center"><img src="images/headshot.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -479,6 +470,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
