--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>[Your Name] — Resume & Contact</title>
-  <meta name="description" content="[Your Name] — Resume site and contact information." />
+  <meta name="description" content="[Logan Price Reed] — Logan Price Reed's Resume site and contact information." />
   <link rel="preload" href="assets/profile.jpg" as="image">
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -12,7 +12,7 @@
   <header class="site-header">
     <div class="container nav">
       <a class="brand" href="#top" aria-label="Home">
-        <span class="brand-mark">■</span> <span>[Your Name]</span>
+        <span class="brand-mark">■</span> <span>[Logan Price Reed]</span>
       </a>
       <nav aria-label="Primary">
         <a href="#about">About</a>
@@ -31,9 +31,9 @@
     <!-- Hero -->
     <section class="hero container">
       <div class="hero-grid">
-        <img class="avatar" src="assets/profile.jpg" alt="[Your Name] headshot" />
+        <img class="avatar" src="assets/headshot.jpg" alt="[Your Name] headshot" />
         <div class="hero-copy">
-          <h1 class="tight">[Your Name]</h1>
+          <h1 class="tight">Logan Price Reed</h1>
           <p class="subtitle">[Your Title] • [City, ST]</p>
           <p class="lede">
             [1–2 line professional summary. Impact, industry focus, tech stack or specialties.]
@@ -41,7 +41,7 @@
           <div class="cta">
             <a href="#resume" class="btn btn-primary">View Résumé</a>
             <a href="#contact" class="btn btn-outline">Contact Me</a>
-            <a href="assets/resume.pdf" class="btn btn-ghost" download>Download PDF</a>
+            <a href="assets/lreedresume.pdf" class="btn btn-ghost" download>Download PDF</a>
           </div>
         </div>
       </div>
@@ -67,12 +67,12 @@
       <h2>Résumé</h2>
       <div class="card">
         <div class="resume-actions">
-          <a href="assets/resume.pdf" class="btn btn-primary" download>Download PDF</a>
-          <a href="assets/resume.pdf" class="btn btn-outline" target="_blank" rel="noopener">Open in new tab</a>
+          <a href="assets/lreedresume.pdf" class="btn btn-primary" download>Download PDF</a>
+          <a href="assets/lreedresume.pdf" class="btn btn-outline" target="_blank" rel="noopener">Open in new tab</a>
         </div>
         <!-- Embedded PDF (falls back gracefully on mobile) -->
-        <object data="assets/resume.pdf" type="application/pdf" class="resume-embed" aria-label="Embedded résumé PDF">
-          <p>Your browser can’t display PDFs here. <a href="assets/resume.pdf" target="_blank" rel="noopener">Open the résumé</a>.</p>
+        <object data="assets/lreedresume.pdf" type="application/pdf" class="resume-embed" aria-label="Embedded résumé PDF">
+          <p>Your browser can’t display PDFs here. <a href="assets/lreedresume.pdf" target="_blank" rel="noopener">Open the résumé</a>.</p>
         </object>
       </div>
     </section>
@@ -81,7 +81,7 @@
     <section id="contact" class="section container">
       <h2>Get in touch</h2>
       <div class="card">
-        <form class="grid" method="post" action="mailto:you@yourdomain.com" enctype="text/plain">
+        <form class="grid" method="post" action="mailto:logan@loganpricereed.com" enctype="text/plain">
           <!-- If you prefer a hosted form (Formspree, etc.), replace action with their endpoint -->
           <label class="field">
             <span>Name</span>
@@ -97,7 +97,7 @@
           </label>
           <div class="actions">
             <button type="submit" class="btn btn-primary">Send</button>
-            <p class="form-note">Prefer email? <a href="mailto:you@yourdomain.com">you@yourdomain.com</a></p>
+            <p class="form-note">Prefer email? <a href="mailto:logan@loganpricereed.com">you@yourdomain.com</a></p>
           </div>
         </form>
       </div>
@@ -114,3 +114,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
