--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </label>
           <div class="actions">
             <button type="submit" class="btn btn-primary">Send</button>
-            <p class="form-note">Prefer email? <a href="mailto:logan@loganpricereed.com">you@yourdomain.com</a></p>
+            <p class="form-note">Prefer email? <a href="mailto:logan@loganpricereed.com">logan@loganpricereed.com</a></p>
           </div>
         </form>
       </div>
@@ -114,4 +114,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
