--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="hero container">
       <div class="hero-grid">
-        <img class="avatar" src="assets/profile.jpg" alt="[Your Name] headshot" />
+        <img class="avatar" src="assets/headshot.jpg" alt="[Your Name] headshot" />
         <div class="hero-copy">
           <h1 class="tight">[Your Name]</h1>
           <p class="subtitle">[Your Title] • [City, ST]</p>
@@ -41,7 +41,7 @@
           <div class="cta">
             <a href="#resume" class="btn btn-primary">View Résumé</a>
             <a href="#contact" class="btn btn-outline">Contact Me</a>
-            <a href="assets/resume.pdf" class="btn btn-ghost" download>Download PDF</a>
+            <a href="assets/lreedresume.pdf" class="btn btn-ghost" download>Download PDF</a>
           </div>
         </div>
       </div>
@@ -67,12 +67,12 @@
       <h2>Résumé</h2>
       <div class="card">
         <div class="resume-actions">
-          <a href="assets/resume.pdf" class="btn btn-primary" download>Download PDF</a>
-          <a href="assets/resume.pdf" class="btn btn-outline" target="_blank" rel="noopener">Open in new tab</a>
+          <a href="assets/lreedresume.pdf" class="btn btn-primary" download>Download PDF</a>
+          <a href="assets/lreedresume.pdf" class="btn btn-outline" target="_blank" rel="noopener">Open in new tab</a>
         </div>
         <!-- Embedded PDF (falls back gracefully on mobile) -->
-        <object data="assets/resume.pdf" type="application/pdf" class="resume-embed" aria-label="Embedded résumé PDF">
-          <p>Your browser can’t display PDFs here. <a href="assets/resume.pdf" target="_blank" rel="noopener">Open the résumé</a>.</p>
+        <object data="assets/lreedresume.pdf" type="application/pdf" class="resume-embed" aria-label="Embedded résumé PDF">
+          <p>Your browser can’t display PDFs here. <a href="assets/lreedresume.pdf" target="_blank" rel="noopener">Open the résumé</a>.</p>
         </object>
       </div>
     </section>
@@ -97,7 +97,7 @@
           </label>
           <div class="actions">
             <button type="submit" class="btn btn-primary">Send</button>
-            <p class="form-note">Prefer email? <a href="mailto:you@yourdomain.com">you@yourdomain.com</a></p>
+            <p class="form-note">Prefer email? <a href="mailto:logan@loganpricereed.com">logan@loganpricereed.com</a></p>
           </div>
         </form>
       </div>
@@ -114,3 +114,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
