--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="h" id="resume-title">Resume</div>
           <div class="row">
             <!-- Replace resume.pdf in /assets/ to enable direct download. -->
-            <a class="cta" href="assets/resume.pdf" download aria-label="Download PDF resume">
+            <a class="cta" href="assets/lreedresume.pdf" download aria-label="Download PDF resume">
               <!-- Simple inline icon (paper/download) -->
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 3v12m0 0 4-4m-4 4-4-4M4 21h16" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
               Download Résumé (PDF)
@@ -206,3 +206,4 @@
   </script>
 </body>
 </html>
+
