--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jonathan Reed — Resume & Contact</title>
+  <title>Logan Reed — Resume & Contact</title>
   <meta name="description" content="Minimal, professional resume download and contact page." />
   <meta name="color-scheme" content="light dark" />
   <style>
@@ -168,18 +168,18 @@
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 3v12m0 0 4-4m-4 4-4-4M4 21h16" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
               Download Résumé (PDF)
             </a>
-            <span class="note">PDF only • Not visible inline</span>
+            <span class="note"></span>
           </div>
         </section>
 
         <section class="section" aria-labelledby="contact-title">
           <div class="h" id="contact-title">Contact</div>
           <div class="row" role="list">
-            <a class="cta" href="mailto:jonathan@example.com" role="listitem" aria-label="Email Jonathan">
+            <a class="cta" href="mailto:logan@loganpricereed.com" role="listitem" aria-label="Email Jonathan">
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 6h16v12H4z" stroke="currentColor" stroke-width="1.6"/><path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
               Email Me
             </a>
-            <span class="note" role="listitem">or copy: <span class="mono">jonathan@example.com</span></span>
+            <span class="note" role="listitem">or copy: <span class="mono">logan@loganpricereed.com</span></span>
           </div>
         </section>
 
@@ -206,4 +206,5 @@
   </script>
 </body>
 </html>
+
 
