--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
     <article class="card" role="region" aria-label="Profile and actions">
       <!-- Left: Photo + Name -->
       <aside class="aside">
-        <img class="headshot" src="assets/headshot.jpg" alt="Professional headshot of Jonathan Reed" />
-        <h1 class="name">Jonathan Reed</h1>
+        <img class="headshot" src="assets/headshot.jpg" alt="Professional headshot of Logan Reed" />
+        <h1 class="name">Logan Reed</h1>
         <p class="role">Compensation Strategy & Analytics</p>
       </aside>
 
@@ -206,5 +206,6 @@
   </script>
 </body>
 </html>
+
 
 
