--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Logan Reed — Resume & Contact</title>
+  <title>Logan Price Reed — Resume & Contact</title>
   <meta name="description" content="Minimal, professional resume download and contact page." />
   <meta name="color-scheme" content="light dark" />
   <style>
@@ -153,7 +153,7 @@
       <!-- Left: Photo + Name -->
       <aside class="aside">
         <img class="headshot" src="assets/headshot.jpg" alt="Professional headshot of Logan Reed" />
-        <h1 class="name">Logan Reed</h1>
+        <h1 class="name">Logan Price Reed</h1>
         <p class="role">Compensation Strategy & Analytics</p>
       </aside>
 
@@ -175,7 +175,7 @@
         <section class="section" aria-labelledby="contact-title">
           <div class="h" id="contact-title">Contact</div>
           <div class="row" role="list">
-            <a class="cta" href="mailto:logan@loganpricereed.com" role="listitem" aria-label="Email Jonathan">
+            <a class="cta" href="mailto:logan@loganpricereed.com" role="listitem" aria-label="Email Logan">
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 6h16v12H4z" stroke="currentColor" stroke-width="1.6"/><path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
               Email Me
             </a>
@@ -196,7 +196,7 @@
     </article>
 
     <footer>
-      © <span id="y"></span> Jonathan Reed
+      © <span id="y"></span> Logan Reed
     </footer>
   </div>
 
@@ -206,6 +206,7 @@
   </script>
 </body>
 </html>
+
 
 
 
