--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <section class="section" aria-labelledby="links-title">
           <div class="h" id="links-title">Links</div>
           <div class="row">
-            <a class="cta" href="https://www.linkedin.com/in/your-handle" target="_blank" rel="noopener" aria-label="Open LinkedIn profile">
+            <a class="cta" href="https://www.linkedin.com/in/loganpricereed" target="_blank" rel="noopener" aria-label="Open LinkedIn profile">
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M6.94 9.5V18M12 18v-5.2a3.1 3.1 0 0 1 6.2 0V18M5.8 6.1a.9.9 0 1 0 0-1.8.9.9 0 0 0 0 1.8Z" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
               LinkedIn
             </a>
@@ -206,6 +206,7 @@
   </script>
 </body>
 </html>
+
 
 
 
